vox/rust/roam-macros-core/src/snapshots/roam_macros_core__tests__borrowed_roam_cow_return.snap
---
source: rust/roam-macros-core/src/lib.rs
expression: "generate(quote!\n{\n    trait TextSvc\n    {\n        async fn normalize(&self, input: String) -> ::std::borrow::Cow<'roam,\n        str>;\n    }\n})"
---
#[allow(non_snake_case, clippy::all)]
pub fn text_svc_service_descriptor() -> &'static ::roam::session::ServiceDescriptor {
    static DESCRIPTOR: std::sync::OnceLock<&'static ::roam::session::ServiceDescriptor> =
        std::sync::OnceLock::new();
    DESCRIPTOR.get_or_init(|| {
        let methods: Vec<&'static ::roam::session::MethodDescriptor> =
            vec![::roam::hash::method_descriptor_with_retry::<
                (String,),
                ::std::borrow::Cow<'static, str>,
            >(
                "TextSvc",
                "normalize",
                &["input"],
                None,
                ::roam::RetryPolicy {
                    persist: false,
                    idem: false,
                },
            )];
        Box::leak(Box::new(::roam::session::ServiceDescriptor {
            service_name: "TextSvc",
            methods: Box::leak(methods.into_boxed_slice()),
            doc: None,
        }))
    })
}
pub trait TextSvc
where
    Self: Send + Sync,
{
    fn normalize<'roam>(
        &self,
        call: impl ::roam::Call<'roam, ::std::borrow::Cow<'roam, str>, ::core::convert::Infallible>,
        input: String,
    ) -> impl std::future::Future<Output = ()> + Send;
}
#[doc = r" Dispatcher for this service."]
#[doc = r""]
#[doc = r" Wraps a handler and implements [`#roam::Handler`] by routing incoming"]
#[doc = r" calls to the appropriate trait method by method ID."]
#[derive(Clone)]
pub struct TextSvcDispatcher<H> {
    handler: H,
    middlewares: Vec<::std::sync::Arc<dyn ::roam::ServerMiddleware>>,
}
impl<H> TextSvcDispatcher<H>
where
    H: TextSvc + Clone + Send + Sync + 'static,
{
    #[doc = r" Create a new dispatcher wrapping the given handler."]
    pub fn new(handler: H) -> Self {
        Self {
            handler,
            middlewares: vec![],
        }
    }
    #[doc = r" Append a server middleware to this dispatcher."]
    pub fn with_middleware(mut self, middleware: impl ::roam::ServerMiddleware) -> Self {
        self.middlewares.push(::std::sync::Arc::new(middleware));
        self
    }
    async fn run_pre_hooks(&self, context: &::roam::RequestContext<'_>) {
        for middleware in &self.middlewares {
            middleware.pre(context).await;
        }
    }
    async fn run_post_hooks(
        &self,
        context: &::roam::RequestContext<'_>,
        outcome: ::roam::ServerCallOutcome,
    ) {
        for middleware in self.middlewares.iter().rev() {
            middleware.post(context, outcome).await;
        }
    }
}
impl<H, R> ::roam::Handler<R> for TextSvcDispatcher<H>
where
    H: TextSvc + Clone + Send + Sync + 'static,
    R: ::roam::ReplySink,
{
    fn retry_policy(&self, method_id: ::roam::MethodId) -> ::roam::RetryPolicy {
        if method_id == text_svc_service_descriptor().methods[0usize].id {
            return ::roam::RetryPolicy {
                persist: false,
                idem: false,
            };
        }
        ::roam::RetryPolicy::VOLATILE
    }
    async fn handle(
        &self,
        call: ::roam::SelfRef<::roam::RequestCall<'static>>,
        reply: R,
        schemas: ::std::sync::Arc<::roam::SchemaRecvTracker>,
    ) {
        let method_id = call.method_id;
        let args_bytes = match &call.args {
            ::roam::Payload::Incoming(bytes) => bytes,
            _ => {
                reply
                    .send_error(
                        ::roam::RoamError::<::core::convert::Infallible>::InvalidPayload(
                            "args not Incoming".into(),
                        ),
                    )
                    .await;
                return;
            }
        };
        if method_id == text_svc_service_descriptor().methods[0usize].id {
            let deser_result = if let Some(binder) = reply.channel_binder() {
                ::roam::with_channel_binder(binder, || {
                    ::roam::schema_deser::schema_deserialize_args_borrowed(
                        args_bytes, method_id, &schemas,
                    )
                })
            } else {
                ::roam::schema_deser::schema_deserialize_args_borrowed(
                    args_bytes, method_id, &schemas,
                )
            };
            let args: (String,) = match deser_result {
                Ok(v) => v,
                Err(e) => {
                    reply
                        .send_error(
                            ::roam::RoamError::<::core::convert::Infallible>::InvalidPayload(
                                e.to_string(),
                            ),
                        )
                        .await;
                    return;
                }
            };
            let (input,) = args;
            let extensions = ::roam::Extensions::new();
            let context = ::roam::RequestContext::with_extensions(
                text_svc_service_descriptor().methods[0usize],
                &call.metadata,
                &extensions,
            );
            if !self.middlewares.is_empty() {
                self.run_pre_hooks(&context).await;
            }
            let (reply, outcome_handle) = ::roam::observe_reply(reply);
            let sink_call = ::roam::SinkCall::new(reply);
            self.handler.normalize(sink_call, input).await;
            if !self.middlewares.is_empty() {
                self.run_post_hooks(&context, outcome_handle.outcome())
                    .await;
            }
            return;
        }
        reply
            .send_error(::roam::RoamError::<::core::convert::Infallible>::UnknownMethod)
            .await;
    }
}
#[doc = "Client for the `TextSvc` service.\n\nStores a type-erased [`Caller`](:: roam::Caller) implementation."]
#[must_use = "Dropping this client may close the connection if it is the last caller."]
#[derive(Clone)]
pub struct TextSvcClient {
    caller: ::roam::ErasedCaller,
}
impl TextSvcClient {
    #[doc = r" Create a new client wrapping the given caller."]
    pub fn new(caller: impl ::roam::Caller) -> Self {
        Self {
            caller: ::roam::ErasedCaller::new(caller),
        }
    }
    #[doc = r" Append a client middleware to this client."]
    pub fn with_middleware(self, middleware: impl ::roam::ClientMiddleware) -> Self {
        Self {
            caller: self
                .caller
                .with_middleware(text_svc_service_descriptor(), middleware),
        }
    }
    #[doc = r" Resolve when the underlying connection closes."]
    pub async fn closed(&self) {
        ::roam::Caller::closed(&self.caller).await;
    }
    #[doc = r" Return whether the underlying connection is still considered connected."]
    pub fn is_connected(&self) -> bool {
        ::roam::Caller::is_connected(&self.caller)
    }
    pub async fn normalize(
        &self,
        input: String,
    ) -> Result<::roam::SelfRef<::std::borrow::Cow<'static, str>>, ::roam::RoamError> {
        let method_id = text_svc_service_descriptor().methods[0usize].id;
        let args = (input,);
        let req = ::roam::RequestCall {
            method_id,
            args: ::roam::Payload::outgoing(&args),
            metadata: Default::default(),
            schemas: Default::default(),
        };
        let with_tracker = ::roam::Caller::call(&self.caller, req)
            .await
            .map_err(|e| match e {
                ::roam::RoamError::UnknownMethod => {
                    ::roam::RoamError::<::core::convert::Infallible>::UnknownMethod
                }
                ::roam::RoamError::InvalidPayload(msg) => {
                    ::roam::RoamError::<::core::convert::Infallible>::InvalidPayload(msg)
                }
                ::roam::RoamError::Cancelled => {
                    ::roam::RoamError::<::core::convert::Infallible>::Cancelled
                }
                ::roam::RoamError::ConnectionClosed => {
                    ::roam::RoamError::<::core::convert::Infallible>::ConnectionClosed
                }
                ::roam::RoamError::SessionShutdown => {
                    ::roam::RoamError::<::core::convert::Infallible>::SessionShutdown
                }
                ::roam::RoamError::SendFailed => {
                    ::roam::RoamError::<::core::convert::Infallible>::SendFailed
                }
                ::roam::RoamError::Indeterminate => {
                    ::roam::RoamError::<::core::convert::Infallible>::Indeterminate
                }
                ::roam::RoamError::User(never) => match never {},
            })?;
        let ::roam::WithTracker {
            value: response,
            tracker: schema_tracker,
        } = with_tracker;
        response.try_repack(|resp, _bytes| {
            let ret_bytes = match &resp.ret {
                ::roam::Payload::Incoming(bytes) => bytes,
                _ => {
                    return Err(
                        ::roam::RoamError::<::core::convert::Infallible>::InvalidPayload(
                            "response not Incoming".into(),
                        ),
                    );
                }
            };
            let result: Result<
                ::std::borrow::Cow<'static, str>,
                ::roam::RoamError<::core::convert::Infallible>,
            > = ::roam::schema_deser::schema_deserialize_response_borrowed(
                ret_bytes,
                method_id,
                &schema_tracker,
            )
            .map_err(|e| {
                ::roam::RoamError::<::core::convert::Infallible>::InvalidPayload(e.to_string())
            })?;
            let ret = result?;
            Ok(ret)
        })
    }
}
impl From<::roam::DriverCaller> for TextSvcClient {
    fn from(caller: ::roam::DriverCaller) -> Self {
        Self::new(caller)
    }
}
